--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
 ---
 layout: splash
 ---
+# Data Visualization Club @ Indiana Univeristy
+
+## Club Meetings
+We meet every Monday on Zoom from 7:30 to 8:30.
+
+## How do I apply?
+
+## Case Competition
